Fixes logout link not reappearing after collapse, adds navbar offset

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,6 +1,12 @@
-// Place all the styles related to the Home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#main-region {
+  padding-top: 56px; /* Space for fixed navbar */
+}
+
+@media (min-width: 768px) {
+  [role="main"] {
+    padding-top: 48px; /* Space for fixed navbar */
+  }
+}
 
 .message-input-container {
   border-top: 1px solid #c4c4c4;
@@ -18,14 +24,9 @@
 }
 
 .message-input-container button {
-  background: #05728f none repeat scroll 0 0;
-  border: medium none;
-  color: #fff;
-  cursor: pointer;
-  font-size: 17px;
-  height: 48px;
+  height: 50px;
   position: absolute;
   right: 0;
-  top: 0;
+  top: -1px;
   width: 125px;
 }
